--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -27,20 +27,6 @@ jobs:
           commit-filter: '[skip ci];[ci skip];[skip github]'
           commit-filter-separator: ';'
 
-  run_nightly:
-    runs-on: ubuntu-latest
-    outputs:
-      run: ${{ github.event_name == 'schedule' || contains(steps.get_head_commit_message.outputs.COMMIT_MSG, '[deps nightly]') }}
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
-      - id: get_head_commit_message
-        name: get head commit message
-        run: |
-          echo "$(git show -s --format=%s)"
-          echo "COMMIT_MSG=$(git show -s --format=%s)" >> "$GITHUB_OUTPUT"
-
   latest:
     needs: check_skip
     if: ${{ needs.check_skip.outputs.skip == 'false' }}
@@ -89,11 +75,25 @@ jobs:
         if: success()
         name: 'Upload coverage to CodeCov'
 
+  run_nightly:
+    runs-on: ubuntu-latest
+    outputs:
+      run: ${{ github.event_name == 'schedule' || contains(steps.get_head_commit_message.outputs.COMMIT_MSG, '[deps nightly]') }}
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+      - id: get_head_commit_message
+        name: get head commit message
+        run: echo "COMMIT_MSG=$(git show -s --format=%s)" >> "$GITHUB_OUTPUT"
+
   nightly:
     needs: run_nightly
     if: ${{ needs.run_nightly.outputs.run == 'true' }}
     runs-on: ubuntu-latest
     name: test against nighlty dependencies
+    env:
+      DEPS_VERSION: "dev"
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
