--- a/setup.cfg
+++ b/setup.cfg
@@ -36,9 +36,7 @@ python_requires = >=3.10
 dev =
     pytest
     pytest-cov
-    # XXX: pin pytest-xdist to workaround:
-    # https://github.com/pytest-dev/pytest-xdist/issues/840
-    pytest-xdist==2.5.0
+    pytest-xdist
     pytest-xdist[psutil]
     coverage
     mypy
